[gd_scene load_steps=9 format=2]

[ext_resource path="res://bg/03.png" type="Texture" id=1]
[ext_resource path="res://SPRITES_SOPHIE/Npc/salamandraAnim-Sheet.png" type="Texture" id=2]
[ext_resource path="res://fonts/eEraDua.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://FinalJefe/CDMX.gd" type="Script" id=4]
[ext_resource path="res://SPRITES_SOPHIE/ajolote/fin3.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="03" type="Sprite" parent="."]
scale = Vector2( 3.41333, 2 )
texture = ExtResource( 1 )
centered = false

[node name="Dialogo" type="Label" parent="."]
margin_left = 16.0
margin_top = 390.0
margin_right = 992.0
margin_bottom = 526.0
custom_fonts/font = SubResource( 1 )
autowrap = true

[node name="tiempoDialogo" type="Timer" parent="."]

[node name="btnContinuar" type="Button" parent="."]
anchor_right = 1.0
margin_left = 808.0
margin_top = 32.0
margin_right = 977.0
margin_bottom = 69.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "CONTINUAR"
flat = true

[node name="EstadoMexico" type="Sprite" parent="."]
position = Vector2( 522, 255 )
scale = Vector2( 9.35938, 9.35938 )
texture = ExtResource( 2 )
hframes = 4
frame = 2

[node name="Fin3" type="Sprite" parent="EstadoMexico"]
visible = false
position = Vector2( -36.2204, -18.4841 )
scale = Vector2( 0.343072, 0.343072 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="EstadoMexico/Fin3"]
margin_left = -44.8467
margin_top = 21.489
margin_right = 119.153
margin_bottom = 133.489
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 3 )
text = "Obtuviste la insgnia \"Guardi√°n del Ecosistema\" FELICIDADES!"
align = 1
autowrap = true

[connection signal="pressed" from="btnContinuar" to="." method="_on_Button_pressed"]
